Initial commit of my customized portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -2,63 +2,57 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Himanshu Chandola, a proficient Frontend Developer with 2 years of experience in React.js, Next.js, and TypeScript. Explore my portfolio for innovative web development projects."
+      content="Sumit Katkam is a passionate Software Developer and Data Analyst skilled in React.js, Node.js, Python, and Power BI. Explore real-time projects combining full-stack development and data-driven insights."
     />
     <meta
       name="keywords"
-      content="Himanshu Chandola, Frontend Developer, React.js, Next.js, TypeScript, Web Development, Software Engineer, Programmer, Coding"
+      content="Sumit Katkam, Spftware Developer, Data Analyst, React.js, Programmer, Coding"
     />
-    <meta name="author" content="Himanshu Chandola" />
+    <meta name="author" content="Sumit Katkam" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="en" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://himanshuchandola-portfolio.netlify.app/"
+      content=""
     />
     <meta
       property="og:title"
-      content="Himanshu Chandola - Frontend Developer Portfolio"
+      content="Sumit Katkam - Software Developer | Data Analyst Portfolio"
     />
     <meta
       property="og:description"
-      content="Discover the professional journey and projects of Himanshu Chandola, specializing in React.js, Next.js, and TypeScript."
+      content="Explore the portfolio of Sumit Katkam, showcasing full-stack web applications and data analytics projects using React.js, Node.js, Python, and Power BI."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/meta-image.jpg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:url"
-      content="https://himanshuchandola-portfolio.netlify.app/"
+      content=""
     />
     <meta
       name="twitter:title"
-      content="Himanshu Chandola - Frontend Developer Portfolio"
+      content="Sumit Katkam - Software Developer | Data Analyst Portfolio"
     />
     <meta
       name="twitter:description"
-      content="Discover the professional journey and projects of Himanshu Chandola, specializing in React.js, Next.js, and TypeScript."
+      content="Explore full-stack projects and data analytics dashboards built by Sumit Katkam using React, Firebase, Python, and Power BI."
     />
-    <meta name="twitter:image" content="%PUBLIC_URL%/meta-image.jpg" />
-    <meta name="twitter:creator" content="@[himanshuistaken]" />
-
-    <title>Himanshu Chandola Portfolio</title>
+    <link rel="icon" href="SK Icon.png" />
+    <title>Sumit Katkam Portfolio</title>
 
     <script type="text/javascript">
       var titleText = [
-        "Himanshu Chandola Portfolio",
-        "Frontend Developer | React.js",
+        "Sumit Katkam Portfolio",
+        "Software Developer | Data Analyst",
       ];
       var counter = 0;
 
